force-app/main/default/objects/SystemIntegrationConfig__mdt/SystemIntegrationConfig__mdt.object-meta.xml
<CustomObject>
    <label>System Integration Config</label>
    <pluralLabel>System Integration Configs</pluralLabel>
</CustomObject>