force-app/main/default/objects/SystemIntegrationConfig__mdt/fields/DataFetcherClassName__c.field-meta.xml
<CustomField>
    <fullName>DataFetcherClassName__c</fullName>
    <label>Data Fetcher Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>