force-app/main/default/objects/SystemIntegrationConfig__mdt/fields/RequestBodyPreparerClassName__c.field-meta.xml
<CustomField>
    <fullName>RequestBodyPreparerClassName__c</fullName>
    <label>Request Body Preparer Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>