force-app/main/default/objects/SystemIntegrationConfig__mdt/fields/SystemType__c.field-meta.xml
<CustomField>
    <fullName>SystemType__c</fullName>
    <label>System Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>